--- a/GreetingApp/wwwroot/Html/Login.html
+++ b/GreetingApp/wwwroot/Html/Login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/Css/Login.css" />
 </head>
 <body class="Login_Body_Div">
-    <div class="Login_Main_Div" onkeyup="Validation()">
+    <div class="Login_Main_Div" >
         <div class="Login_Div">Login</div>
         <div class="Login_Inputs_Div">
             <div class="Inputs_Divs">
@@ -21,30 +21,44 @@
                 <button id="button_SignIn" class="Disable_SignIn_Button" onclick="SignIn()">SignIn</button>
             </div>
         </div>
-        <div class="container" style="background-color:#f1f1f1">
+        <!--<div class="container" style="background-color:#f1f1f1">
             <button type="button" class="cancelbtn" onclick="window.location.href='Register.html' ">Cancel</button>
             <span class="psw">Forgot <a href="#">password?</a></span>
-        </div>
+        </div>-->
 
     </div>
 </body>
 </html>
-<script>
-    src = "https://code.jquery.com/jquery-3.2.1.js"
-    integrity = "sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-    crossorigin = "anonymous" >
-</script>
+<script src="https://code.jquery.com/jquery-3.2.0.js"></script>
 <script type="text/javascript">
-        function Validation() {
-            var email_data = document.getElementById("email").value;
-            var password_data = document.getElementById("password").value;
-            var EmailRegex = /^[0-9a-zA-Z]+[.+_]{0,1}[0-9A-Za-z]+[.][a-zA-Z]{2,3}([.][a-zA-Z]{2,3}){0,1}/
-            if (email_data != "" && password_data != "" && email_data.match(EmailRegex)) {
-                document.getElementById("button_SignIn").className = "SignIn_Button";
-            }
-        }
+        //function Validation() {
+        //    var email_data = document.getElementById("email").value;
+        //    var password_data = document.getElementById("password").value;
+        //    var EmailRegex = /^[0-9a-zA-Z]+[.+_]{0,1}[0-9A-Za-z]+[.][a-zA-Z]{2,3}([.][a-zA-Z]{2,3}){0,1}/
+        //    if (email_data != "" && password_data != "" && email_data.match(EmailRegex)) {
+        //        document.getElementById("button_SignIn").className = "SignIn_Button";
+        //    }
+        //}
     function SignIn() {
-        alert("Login Successful");
+        var data = {
+            "email": $('#email').val(),
+            "password": $('#password').val(),
+        }
+        console.log("login data", JSON.stringify(data));
+        $.ajax(
+            {
+                type: 'POST',
+                url: 'https://localhost:44326/api/GreetingApp/ValidateEmployee',
+                data: JSON.stringify(data),
+                contentType: 'application/json',
+                success: function () {
+                    window.location.href="User.html"
+                },
+                error: function () {
+                    console.log("error");
+                }
+
+            })
     }
 
 </script>
